# n8n-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.deprecated/pr20_json_workflow/: README.md  autopoiesis.json
.deprecated/pr21_service_contracts/: README.md
.github/workflows/: ci-rust-master.yml
docs/: AUTOPOIESIS_SPEC.md  COGNITIVE_WORKFLOW_CONTRACTS.md  INTEGRATION_EXECUTION_PLAN.md
n8n-rust/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  INTEGRATION_PLAN.md  README.md
n8n-rust/crates/n8n-arrow/: Cargo.toml
n8n-rust/crates/n8n-arrow/src/: convert.rs  error.rs  flight.rs  ipc.rs  lib.rs  schema.rs
n8n-rust/crates/n8n-contract/: Cargo.toml
n8n-rust/crates/n8n-contract/src/: bridge.rs  chat_session.rs  compiled_style.rs  crew_router.rs  envelope.rs  executors.rs  free_will.rs  impact_gate.rs  interface_gateway.rs  ladybug_router.rs  legacy_dto.rs  lib.rs  mcp_inbound.rs  pg_store.rs  semantic_model.rs  thinking_mode.rs  types.rs  wire_bridge.rs
n8n-rust/crates/n8n-core/: Cargo.toml
n8n-rust/crates/n8n-core/src/: chess_workflow.rs  credentials.rs  engine.rs  error.rs  executor.rs  hot_path.rs  jitson_hooks.rs  lib.rs  node_types.rs  runtime.rs  storage.rs
n8n-rust/crates/n8n-core/src/expression/: evaluator.rs  extensions.rs  mod.rs  parser.rs  variables.rs
n8n-rust/crates/n8n-core/tests/: integration_tests.rs
n8n-rust/crates/n8n-db/: Cargo.toml
n8n-rust/crates/n8n-db/migrations/: 001_initial_schema.sql
n8n-rust/crates/n8n-db/src/: error.rs  lib.rs  storage.rs
n8n-rust/crates/n8n-db/src/entities/: credentials.rs  execution.rs  mod.rs  project.rs  settings.rs  tag.rs  user.rs  variables.rs  webhook.rs  workflow.rs
n8n-rust/crates/n8n-db/src/repositories/: credentials.rs  execution.rs  mod.rs  project.rs  settings.rs  tag.rs  user.rs  variables.rs  webhook.rs  workflow.rs
n8n-rust/crates/n8n-grpc/: Cargo.toml  build.rs
n8n-rust/crates/n8n-grpc/proto/: n8n.proto
n8n-rust/crates/n8n-grpc/src/: lib.rs
n8n-rust/crates/n8n-grpc/src/services/: arrow_service.rs  hamming_service.rs  json_compat.rs  mod.rs  workflow_service.rs
n8n-rust/crates/n8n-grpc/src/transport/: api.rs  mod.rs  negotiate.rs  rest.rs  stdio.rs
n8n-rust/crates/n8n-hamming/: Cargo.toml
n8n-rust/crates/n8n-hamming/benches/: hamming_bench.rs
n8n-rust/crates/n8n-hamming/src/: error.rs  lib.rs  vector.rs
n8n-rust/crates/n8n-server/: Cargo.toml
n8n-rust/crates/n8n-server/src/: main.rs
n8n-rust/crates/n8n-workflow/: Cargo.toml
n8n-rust/crates/n8n-workflow/src/: connection.rs  data.rs  error.rs  execution.rs  lib.rs  node.rs  workflow.rs
n8n-rust/workflows/: autopoiesis.json  crew_research_pipeline.json
proto/: ada.proto
src/: clients.rs  config.rs  executor.rs  flight.rs  handlers.rs  lance.rs  lib.rs  main.rs  redis.rs  tasks.rs  types.rs
src/contract/: crew_router.rs  envelope.rs  mod.rs  pg_store.rs  types.rs
tests/: contract_tests.rs
workflows/: ada_lego_executor.json  crew_research_pipeline.json  timer_dto.yaml
