[package]
name = "ada-n8n"
version = "1.0.0"
edition = "2021"
description = "Ada N8N Orchestrator - Field operations and workflow automation"
authors = ["Ada <ada@exo.red>"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Random
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
