[package]
name = "n8n-grpc"
description = "gRPC service definitions and Arrow Flight integration for n8n-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
n8n-workflow = { path = "../n8n-workflow" }
n8n-core = { path = "../n8n-core" }
n8n-arrow = { path = "../n8n-arrow" }
n8n-hamming = { path = "../n8n-hamming" }

tonic = { workspace = true }
prost = { workspace = true }
tonic-reflection = { workspace = true }

arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# REST API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-stream = "0.3"

[build-dependencies]
tonic-build = { workspace = true }
